--- a/main/templates/progress.html
+++ b/main/templates/progress.html
@@ -26,7 +26,10 @@
           <div style="cursor: pointer;" onclick="window.location.href='{% url 'records_progress' todaysDate %}'" class="card">
             <div class="card-body">
                 <h6>Today's Subjects</h6>
-                <h6 class="text-primary" style="font-size: 30px;">{{ todaysTotal }}</h6>
+                <h6 style="font-size: 30px;">
+                  <span class="text-primary"> {{ todaysTotal }}</span>{% if running_records %} + <span class="text-success"> {{running_records|length}} </span> {%endif%}
+                </h6>
+              
             </div>
           </div>
         </div>
@@ -255,13 +258,7 @@ new Chart(ctx3, {
  
 
 <style type="text/css">
-          .card {
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            border-color: green;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+
         .chartother {
 
         height: 250px; /* Adjust this value to control the height */
