--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -3,8 +3,10 @@
 
 
 <div class="col-md-6 offset-md-3">
-	<h1>Register</h1>
-	<br/>
+    <br>
+    <div class="card p-3 mb-2">
+    <h1 class="text-center">Register</h1>
+    <br>
 	<form method="POST" action="">
 		{% csrf_token %}
 		{% if form.errors %}
@@ -18,13 +20,14 @@
 				  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				</div>
 			{% endif %}
-
 		{{ form.as_p }}
-
-		<br/>
-		  <button type="submit" class="btn btn-secondary">Register</button>
+		<br>
+		<div class="d-flex justify-content-center">
+			<button type="submit" class="btn btn-primary">Register</button>
+		</div>
+		  
+		</div>
 	</form>
 </div>
-
 {% endblock %}
 
