--- a/main/templates/setting_page.html
+++ b/main/templates/setting_page.html
@@ -2,14 +2,16 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-    <div class="card p-3 mb-2">
-    <h2>Settings</h2>
+    <br>
 
+    <div class="card p-3 mb-2">
+    <h2 class="text-center">Settings</h2>
+    <br>
     <form method="POST">
         {% csrf_token %}
 
         <div class="row mb-2">
-            <label for="target_goal" class="col-sm-4 col-form-label">Target:</label>
+            <label for="target_goal" class="col-sm-4 col-form-label"><i class='bx bx-target-lock '></i> Target:</label>
             <div class="col-sm">
                 {{ form.target_goal }}
                 <div class="invalid-feedback">
@@ -19,7 +21,7 @@
         </div>
 
        <div class="row mb-2">
-            <label for="target_date" class="col-sm-4 col-form-label">Target Date:</label>
+            <label for="target_date" class="col-sm-4 col-form-label"><i class='bx bx-calendar-heart'></i> Target Date:</label>
             <div class="col-sm">
                 {{ form.target_date }}
                 <div class="invalid-feedback">
@@ -30,7 +32,7 @@
 
 <hr my-0>
         <div class="row mb-2">
-            <label for="{{ form.daily_target_hours.id_for_label }}" class="col-sm-4 col-form-label">Daily Study Hours:</label>
+            <label for="{{ form.daily_target_hours.id_for_label }}" class="col-sm-4 col-form-label"><i class='bx bx-time-five'></i> Daily Study Hours:</label>
             <div class="col-sm">
                 {{ form.daily_target_hours }}
                 <div class="invalid-feedback">
@@ -39,7 +41,7 @@
             </div>
         </div>
         <div class="row mb-2">
-            <label for="{{ form.max_queued.id_for_label }}" class="col-sm-4 col-form-label">Max Scheduled:</label>
+            <label for="{{ form.max_queued.id_for_label }}" class="col-sm-4 col-form-label"><i class='bx bx-add-to-queue' ></i> Max Scheduled:</label>
             <div class="col-sm">{{ form.max_queued }}
                 <div class="invalid-feedback">
                     Why you want to go beyond 10?.
@@ -48,7 +50,7 @@
         </div>
         <hr my-0>
         <div class="row mb-2">
-            <label for="{{ form.wallpaper_number.id_for_label }}" class="col-sm-4 col-form-label">Wallpaper:</label>
+            <label for="{{ form.wallpaper_number.id_for_label }}" class="col-sm-4 col-form-label"><i class='bx bx-palette' ></i> Wallpaper:</label>
             <div class="col-sm">
                 {{ form.wallpaper_number}}
                 <div class="invalid-feedback">
@@ -56,23 +58,15 @@
                 </div>
             </div>
         </div>
-</div>
-        <div class="card p-3">
+
+        <br>
         <div class="d-flex justify-content-center">
         <button type="submit" class="btn btn-success mx-2">Apply</button>
         <a href="{% url 'home' %}" class="btn btn-primary mx-2">Home</a>
         </div>
-        </div>
         
+        </div>
     </form>
 </div>
-<style type="text/css">
-          .card {
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(10px);
-            border-color: green;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-</style>
+
 {% endblock %}
