--- a/main/templates/update_record.html
+++ b/main/templates/update_record.html
@@ -4,6 +4,7 @@
 
 <div class="col-md-6 offset-md-3">
     <br/>
+        <div class="card p-3 mb-2 ">
     <h2 class="text-center">Update Subject</h2>
     <br/>
     <form method="POST" >
@@ -37,6 +38,7 @@
         <a href="{% url 'home' %}" class="btn btn-primary mx-2">Back</a>
         <button type="submit" class="btn btn-success">Update Subject</button>
         </div>
+      </div>
     </form>
 </div>
 
