Look and feel Improvements

--- a/main/templates/record.html
+++ b/main/templates/record.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="col-md-6 offset-md-3">
     
-
+<br>
 <div class="card card-container d-flex justify-content-center">
     <div class="card-body p-4 ">
         <div class="text-start card-title">
@@ -32,13 +32,14 @@
 <!-- Modal -->
 <div class="modal fade text-center" id="deletethis" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="h  modal-content py-4">
+    <div class="modal-content py-4">
+        <i class='bx bx-error bx-tada h1' style='color:#ff0000'  ></i>
             <h4>Want to delete?</h4>
             <h5>{{ sub_list.subname }} - {{ sub_list.topic }}</h5>
         <br>
-      <div class="d-flex justify-content-around">
-        <button type="button" class="btn btn-outline-success rounded-pill" data-bs-dismiss="modal"><i class='bx bx-check-shield bx-flashing' style='color:#5cb85c'  ></i> No</button>
-        <a href="{% url 'delete_record' sub_list.id %}" class="btn btn-outline-danger rounded-pill mx-2"><i class='bx bx-error bx-tada' style='color:#ff0000'  ></i> Yes, Delete it!</a>
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-success rounded-pill" data-bs-dismiss="modal">No</button>
+        <a href="{% url 'delete_record' sub_list.id %}" class="btn btn-danger rounded-pill mx-2">Yes, Delete it!</a>
         
       </div>
     </div>
