--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -83,6 +83,7 @@
                           Delete
                         </button>
                     </div>
+
                     <a href="{% url 'mark_complete' record.id %}" class="mx-2 btn btn-success rounded-pill">
                         <i class='bx bx-check-double bx-flashing' style='color:#ffffff' ></i> Done</a>
                     </div>
@@ -92,12 +93,14 @@
         <div class="modal fade text-center" id="deletecurrentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered">
             <div class="h modal-content py-4">
+                <i class='bx bx-error bx-tada h1' style='color:#ff0000'  ></i>
                     <h4>Want to delete?</h4>
                     <h5>{{ record.subname }} - {{ record.topic }}</h5>
                 <br>
-              <div class="d-flex justify-content-around">
-                <button type="button" class="btn btn-outline-success rounded-pill" data-bs-dismiss="modal"><i class='bx bx-check-shield bx-flashing' style='color:#5cb85c'  ></i> No</button>
-                        <a href="{% url 'delete_record' record.id %}" class="btn btn-outline-danger rounded-pill"><i class='bx bx-error bx-tada' style='color:#ff0000'  ></i> Yes, Delete it!</a>
+              <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-success rounded-pill" data-bs-dismiss="modal">No</button>
+
+                <a href="{% url 'delete_record' record.id %}" class="btn btn-danger rounded-pill mx-2">Yes, Delete it!</a>
               </div>
             </div>
           </div>
@@ -121,45 +124,44 @@
     {% else %}
     <div class="col-12 col-md-6 col-lg-6">
     {% endif %}
-        <div class="mb-4">
-            {% if queued_records %}
-            <div class="card mb-2">
-                <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                    <p style="font-size: 20px; font-weight: bold;">
-                        Pending <span class="text-primary" style="font-size: 25px;">{{ total_queued }}</span> 
-                    </p>
-                </div>
-            </div>
 
-            <div class="card p-3">
-                <table class="table table-borderless table-hover table-sm">
-                            <thead>
-                                <tr>
-                                    <th>Subject</th>
-                                    <th>Topic</th>
-                                    <th  class="text-end">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for record in queued_records %}
-                                    <tr>
-                                        <td><span class="h6">{{ record.subname }}</span></td>
-                                        <td>{{ record.topic }}</td>
-                                        <td class="text-end">
-                                          <div class="btn-group" role="group">
-                                            <a href="{% url 'delete_record' record.id %}" class="btn btn-danger btn-sm">Delete</a>
-                                            <a href="{% url 'update_record' record.id %}" class="btn btn-secondary btn-sm">Edit</a>
-
-                                        </div>
-                                        <a href="{% url 'start_subject' record.id %}" class="btn btn-primary btn-sm">Start</a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                </table>
-            </div>
-            {% endif %}
+    {% if queued_records %}
+    <div class="card p-2">
+        <div class="d-flex align-items-center justify-content-center">
+            <p style="font-size: 20px; font-weight: bold;">
+                Pending <span class="text-primary" style="font-size: 25px;">{{ total_queued }}</span> 
+            </p>
         </div>
+        <hr class="my-0"> 
+        <table class="table table-borderless table-hover table-sm">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Subject</th>
+                            <th>Topic</th>
+                            <th  class="text-end px-5">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for record in queued_records %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td><span class="h6">{{ record.subname }}</span></td>
+                                <td>{{ record.topic }}</td>
+                                <td class="text-end">
+                                  <div class="btn-group" role="group">
+                                    <a href="{% url 'delete_record' record.id %}" class="btn btn-danger btn-sm">Delete</a>
+                                    <a href="{% url 'update_record' record.id %}" class="btn btn-secondary btn-sm">Edit</a>
+
+                                </div>
+                                <a href="{% url 'start_subject' record.id %}" class="btn btn-primary btn-sm">Start</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+        </table>
+    </div>
+    {% endif %}
     </div>
 
     <!-- Completed tasks -->
@@ -169,40 +171,39 @@
     <div class="col-12 col-md-6 col-lg-6">
     {% endif %}
 
-        <div class="mb-4">
-            {% if completed_records %}
-            <div class="card mb-2">
-                <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                    <p style="font-size: 20px; font-weight: bold;">
-                        Today's Completed <span class="text-primary" style="font-size: 25px;">{{ total_completed }}</span>
-                    </p>
-                </div>
-            </div>
-
-            <div class="card p-3">
-                <table class="table table-borderless table-hover table-sm">
-                            <thead >
-                                <tr>
-                                    <th>Subject</th>
-                                    <th>Topic</th>
-                                    <th>Done Time</th>
-                                    <th>Time Taken</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for record in completed_records %}
-                                    <tr  style="cursor: pointer;" onclick="window.location.href='{% url 'sub_list' record.id %}'">
-                                        <td><span class="h6">{{ record.subname }}</span></td>
-                                        <td>{{ record.topic }}</td>
-                                        <td>{{ record.done_at.time }}</td>
-                                        <td>{{ record.time_taken|format_timedelta }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                </table>
-            </div>
-            {% endif %}
+    {% if completed_records %}
+    <div class="card p-2">
+        <div class="d-flex align-items-center justify-content-center">
+            <p style="font-size: 20px; font-weight: bold;">
+                Today's Completed <span class="text-primary" style="font-size: 25px;">{{ total_completed }}</span>
+            </p>
         </div>
+        <hr class="my-0">
+
+        <table class="table table-borderless table-hover table-sm">
+                    <thead >
+                        <tr>
+                            <th>#</th>
+                            <th>Subject</th>
+                            <th>Topic</th>
+                            <th>Done Time</th>
+                            <th>Time Taken</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for record in completed_records %}
+                            <tr  style="cursor: pointer;" onclick="window.location.href='{% url 'sub_list' record.id %}'">
+                                <td>{{ forloop.counter }}</td>
+                                <td><span class="h6">{{ record.subname }}</span></td>
+                                <td>{{ record.topic }}</td>
+                                <td>{{ record.done_at.time }}</td>
+                                <td>{{ record.time_taken|format_timedelta }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+        </table>
+    </div>
+    {% endif %}
     </div>
 </div>
 
