Look and feel Improvements

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -133,7 +133,7 @@
             </p>
         </div>
         <hr class="my-0"> 
-        <table class="table table-borderless table-hover table-sm">
+        <table class="table table-borderless table-hover table-sm table-striped">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -180,7 +180,7 @@
         </div>
         <hr class="my-0">
 
-        <table class="table table-borderless table-hover table-sm">
+        <table class="table table-borderless table-hover table-sm table-striped">
                     <thead >
                         <tr>
                             <th>#</th>
