Some Ui Improvements

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -59,8 +59,15 @@
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
 }
 .modal-content {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(20px);
+  border-color: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.modal {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(8px);
   border-color: none;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
