--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -10,7 +10,7 @@
 <div class="d-flex mb-2 justify-content-between align-items-center">
     <div class="text-start">
         <h2 class="text-lg text-md-md text-sm-sm"  id="user-name">
-            {% if user.is_superuser %}
+            {% if not user.first_name %}
                  I'm <span class="text-primary" > {{ user.username|title }}</span>
             {% else %}
                  I'm {{ user.first_name|title }} <span class="text-primary">{{ user.last_name|title }}</span>
@@ -30,7 +30,7 @@
 
 
 <div class="mb-4 d-flex  justify-content-between">
-    <div class="card" style="width: 49%">
+    <div class="card " style="width: 49%">
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h6>{{ dateToday }}</h6>
             <h6 id="today-content" class="text-primary" style=" font-size: 30px; ">{{ total_time }}</h6>
@@ -331,7 +331,7 @@
     <style>
 #time-elapsed {
     font-family: 'Patua One', serif;
-    color: #8B4513; /* Reddish-brown color */
+    color: #8B4513; 
 
 }
 
