--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,14 +9,13 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🕔</text></svg>">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 
 <style>
   body {
@@ -25,31 +24,44 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
-</style>
-</head>
-<body>
-{% include 'navbar.html' %}
+  main {
+    margin-top: 60px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-top: 10px;
+  }
+.navbar-nav .nav-item .nav-link {
+  position: relative;
+  text-decoration: none;
+  color: #000; /* Adjust the text color */
+  display: inline-block;
+  transition: color 0.3s ease;
+}
 
-<main class="container">
-<div>
-  {% block content %}
-  {% endblock %}
-</div>
-</main>
+.navbar-nav .nav-item .nav-link::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 3px;
+  background-color: #007bff;
+  bottom: 0;
+  left: 50%; /* Start from the middle */
+  transform: translateX(-50%); /* Center the line */
+  transition: width 0.3s ease;
+  border-radius: 2px;
+}
 
-{% if messages %}
-{% for message in messages %}
-<div class="sticky-bottom p-3 d-flex flex-column align-items-end justify-content-center"" style="z-index: 9999;">
-<div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'warning' %}alert-warning{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible fade show d-inline " role="alert">
-{{ message }}
-<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-</div>
-{% endfor %}
-{% endif %}
+.navbar-nav .nav-item .nav-link:hover::before {
+  width: 95%;
 
-<style>
-.card {
+}
+.navbar-nav .nav-item .nav-link:hover {
+  color: #007bff; /* Text color on hover */
+}
+
+
+
+  .card {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
   border-radius: 10px;
@@ -57,7 +69,7 @@
   border-right-color: rgba(255, 255, 255, 0.1);
   border-bottom-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
-}
+  }
 .modal-content {
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(20px);
@@ -73,10 +85,33 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 </style>
+</head>
+<body>
+{% include 'navbar.html' %}
+<main class="container">
+<div>
+  {% block content %}
+  {% endblock %}
+</div>
+</main>
+
+<!--Custom Message -->
+{% if messages %}
+{% for message in messages %}
+<div class="sticky-bottom p-3 d-flex flex-column align-items-end justify-content-center"" style="z-index: 9999;">
+<div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'warning' %}alert-warning{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible fade show d-inline " role="alert">
+{{ message }}
+<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+</div>
+{% endfor %}
+{% endif %}
+<!-- Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="{% static 'scripts/myjs.js' %}"></script>
+
 </body>
 </html>
