--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,5 @@
-/* styles<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">.css */
-
-/* Navbar Link Hover Color */
 .navbar-nav .nav-item .nav-link:hover {
-    color: #007bff; /* Change this to your desired hover color */
+    color: #007bff;
 }
 
 main {
