--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -69,8 +69,8 @@
                      <h1 class="display-1 text-responsive" style="font-weight: bold; font-size: 60px;">
                         <span id="time-elapsed"></span>
                      </h1>
-                        <h5  style=" font-size: 45px; ">
-                        <span class="text-primary">{{ record.subname }} </span>{{ record.topic }} 
+                        <h5  class="fw-bold" style=" font-size: 45px; ">
+                        <span class="text-success">{{ record.subname }} </span>{{ record.topic }} 
                         </h5>
                         <h6 class="card-title"></i> Started at: {{ record.start_at.time }}</h6>
                     </div>
