--- a/main/templates/update_record.html
+++ b/main/templates/update_record.html
@@ -12,7 +12,7 @@
 
         <div class="row mb-2 g-3 align-items-center">
           <div class="col-3">
-            <label for="subname" class="col-form-label h5">Subject</label>
+            <label for="subname" class="col-form-label h5"><i class='bx bxs-book-heart'></i> Subject</label>
           </div>
           <div class="col-9">
             {{ form.subname }}
@@ -24,7 +24,7 @@
 
         <div class="row mb-3 g-3 align-items-center">
           <div class="col-3">
-            <label for="topic" class="col-form-label h5">Topic</label>
+            <label for="topic" class="col-form-label h5"><i class='bx bxs-note'></i> Topic</label>
           </div>
           <div class="col-9">
             {{ form.topic }}
