--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,12 +24,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    position: relative;
+
   }
+  
   main {
-    margin-top: 60px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 10px;
+    margin-top: 70px;
+ 
+
   }
 .navbar-nav .nav-item .nav-link {
   position: relative;
