--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg  shadow-sm  fixed-top">
   <div class="container-fluid">
-    <strong><a class="navbar-brand me-auto fs-4" href="{% url 'home' %}">Study Time <span class="text-primary">Tracker</span></a>
+    <strong><a class="navbar-brand me-auto fs-4" href="{% url 'home' %}"><i class='bx bxs-home-heart'></i> Study Time <span class="text-primary">Tracker</span></a>
     </strong>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,8 +10,13 @@
       <ul class="navbar-nav ms-auto nav-underline fs-5 text-center fw-semibold">
         {% if user.is_authenticated %}
           <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_record' %}">Add Subject</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'progress' %}">Progress</a>
         </li>
+       
         <li class="nav-item ">
           <a class="nav-link " href="{% url 'search_page' %}">Search</a>
         </li>
@@ -36,8 +41,12 @@
 
 <style>
     .navbar  {
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(10px); 
+          background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(8px);
+  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
     
     }
 
