--- a/main/templates/records_progress.html
+++ b/main/templates/records_progress.html
@@ -8,7 +8,7 @@
   {%endif%}
   <p class="card-title text-center text-success h3">{{ recordsDate|date:"d F Y" }}</span></p>
 </div>
-
+{% if records %}
 <div class="mb-2 d-flex  justify-content-between">
     <div class="card" style="width: 49%">
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -62,7 +62,7 @@
 
 
 
-{% if records %}
+
 <div class="row">
 <div class="col-sm-12 col-md-12 col-lg-6">
 
@@ -141,6 +141,10 @@
     {% endfor %}
 
     </div>
+</div>
+{%else%}
+<div class="card p-3 mb-2">
+  <h3 class="text-center text-primary">Nothing To Show</h3>
 </div>
 {% endif %}
 
